mobile overflow fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,10 @@ img{
     font-size: 32px;
 }
 
+.smallText{
+    font-size: 12px;
+}
+
 .boldText{
     font-weight: 700;
 }
